--- a/pp-04/screen.css
+++ b/pp-04/screen.css
@@ -8,3 +8,40 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 /* stylelint-enable */
 
 /* ===== BASE STYLES ===== */
+
+/*
+  Setting type to a perfect fourth(3:4) modular scale
+  http://www.modularscale.com/?18&px&1.2&web&text
+*/
+
+html {
+  font-size: 1.125em; /* 18px */
+  line-height: 1.222em; /* 22px = 1 gridline*/
+}
+
+h1 {
+  font-size: 1.333em; /* 23.994px at 18px*/
+  line-height: 1.834em; /* 44px @ 23.994px em */
+}
+
+p {
+  padding-top: 0.611em; /* 11px = 0.5 gridline */
+  padding-bottom: 1.111em; /* 20px = 1.1 gridline */
+}
+
+li,
+ul {
+  padding-bottom: 0.611em; /* 11px */
+}
+
+li:last-child {
+  padding-bottom: 0;
+}
+
+/* ===== STATE STYLES ===== */
+
+/* 545px @ 16px/em */
+@media screen and (min-width: 34.0625em) {
+  .content {
+    margin: 0 18.75% 0 25%;
+  }
